# sample-bedrock-ops-lens

./: .gitignore  .gitleaks.toml  .semgrep.yml  Makefile  README.md  SECURITY.md  analyze.py  bedrock-ops-review-mcp.yaml  collect_public.py  config.example.yaml  deploy.sh  docker-compose.fargate.yml  docker-compose.yml  install.sh  lambda_handler.py  mcp_server.py  pyproject.toml  requirements.txt  setup-pipeline.sh
backend/: Dockerfile  Dockerfile.lambda  requirements.txt  smoke_test.py
backend/app/: auth.py  burndown.py  cache.py  config.py  db.py  filters.py  main.py  schema_init.py
db/: local-setup.sh  partitions.sql  registry.yaml  schema.sql  seed.py  validate.py
db/migrations/: 001_add_endpoint_column.sql  002_add_endpoint_to_status.sql  (+3 more)
docs/: mantle-vs-runtime-telemetry.md  quota-drilldown-implementation.md
frontend/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
infra/: central-account-bootstrap.yaml  cloudformation.yaml  cognito-only.yaml  ecr-bootstrap.yaml  edge-bootstrap.yaml  monitored-account-role.yaml  policy-guard.rules
ingestion/: accounts.py  config.py  cost.py  cw_agentcore.py  cw_guardrails.py  cw_mantle_metrics.py  cw_metrics.py  invocation_logs.py  lambda_handler.py  model_lifecycle.py  proxy_events.py  quotas.py
mcp/: README.md  pyproject.toml
mcp/src/bedrock_lens_mcp/: __init__.py  api_client.py  backends.py  direct_collector.py  server.py
mcp/tests/: test_all_tools.py
scripts/: load-config.sh  run-local.sh  setup-multi-account.py
skills/: bedrock_ops_review.md  orchestrator.md
(+70 files in other folders)
