[project]
name = "bedrock-lens-mcp"
version = "0.1.0"
description = "Model Context Protocol server for the Bedrock Ops Lens dashboard. Exposes the same insights to your IDE that the web UI shows."
authors = [{ name = "Bedrock Ops Lens" }]
requires-python = ">=3.11"

dependencies = [
    # MCP runtime
    "mcp>=1.2.0",
    # HTTP client for the deployed-backend mode (Tier B/C)
    "httpx>=0.27.0",
    # boto3 for the direct-AWS fallback (Tier A)
    "boto3>=1.34.0",
    # YAML for config
    "pyyaml>=6.0",
]

[project.scripts]
bedrock-lens-mcp = "bedrock_lens_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bedrock_lens_mcp"]
